--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       ga('create', 'UA-91154471-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <meta name="description" content="Интернет-магазин по продаже фильтров для воды AQUEL в России. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
+    <meta name="description" content="Интернет-магазин по продаже фильтров для воды AQUEL. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
     <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Водоочистительные системы AQUEL</title>
+    <title>Фильтры для очистки воды для дома AQUEL</title>
   </head>
   <body>
     <div class="main-container">
@@ -33,11 +33,11 @@
               <a class="header__img" href="index.html">
                 <img src="img/header-logo.png" width="60" height="60" alt="Логотип">
               </a>
-              <a class="header__name" href="index.html">A<img src="img/logo-name-letter-Q.png" alt="Логотип">UEL</a>
+              <a class="header__name" href="index.html">A<img src="img/logo-name-letter-Q.png" width="40" height="40" alt="Логотип">UEL</a>
             </div>
 
             <div class="header__tel">
-              <svg x="0px" y="0px" width="18" height="18" viewBox="0 0 348.077 348.077" xml:space="preserve">
+              <svg x="0px" y="0px" width="16" height="16" viewBox="0 0 348.077 348.077" xml:space="preserve">
                 <path d="M340.273,275.083l-53.755-53.761c-10.707-10.664-28.438-10.34-39.518,0.744l-27.082,27.076
                 c-1.711-0.943-3.482-1.928-5.344-2.973c-17.102-9.476-40.509-22.464-65.14-47.113c-24.704-24.701-37.704-48.144-47.209-65.257
                 c-1.003-1.813-1.964-3.561-2.913-5.221l18.176-18.149l8.936-8.947c11.097-11.1,11.403-28.826,0.721-39.521L73.39,8.194
@@ -50,7 +50,7 @@
             </div>
 
             <div class="header__email">
-              <svg x="0px" y="0px" width="20" height="20" viewBox="0 0 31.012 31.012" xml:space="preserve">
+              <svg x="0px" y="0px" width="18" height="18" viewBox="0 0 31.012 31.012" xml:space="preserve">
                 <g>
                   <path d="M28.512,26.529H2.5c-1.378,0-2.5-1.121-2.5-2.5V6.982c0-1.379,1.122-2.5,2.5-2.5h26.012c1.378,0,2.5,1.121,2.5,2.5v17.047
                   C31.012,25.408,29.89,26.529,28.512,26.529z M2.5,5.482c-0.827,0-1.5,0.673-1.5,1.5v17.047c0,0.827,0.673,1.5,1.5,1.5h26.012
@@ -110,11 +110,11 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Фильтр Aquel 200</a></li>
+                      <li><a href="catalog/aquel-200.html">Фильтр Aquel 200</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Фильтр Aquel 1000</a></li>
+                      <li><a href="catalog/aquel-1000.html">Фильтр Aquel 1000</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Фильтр Aquel Zero</a></li>
+                      <li><a href="catalog/aquel-zero.html">Фильтр Aquel Zero</a></li>
                     </ul>
                   </li>
                   <li><a href="aquel-tehnology.html">Технологии</a></li>
@@ -137,69 +137,100 @@
 
         <div class="welcome-to-shop">
 
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+          <div class="carusel-wrapper">
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
 
-              <div class="item active">
-                <h1 class="welcome-to-shop__title">Продажа фильтров для очистки воды</h1>
-                <h2 class="welcome-to-shop__subtitle">Проточный фильтр под мойку для дома</h2>
-                <div class="button-wrapper">
-                <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-200.html" role="button">AQUEL 200</a>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+
+                <div class="item active">
+                  <h1 class="welcome-to-shop__title">Продажа фильтров для очистки воды</h1>
+                  <h2 class="welcome-to-shop__subtitle">Проточный фильтр под мойку для дома</h2>
+                  <div class="button-wrapper">
+                  <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-200.html" role="button">AQUEL 200</a>
+                  </div>
                 </div>
+
+                <div class="item">
+                  <h2 class="item__title">Фильтр для воды в офис</h2>
+                  <h2 class="item__subtitle">Отличный дизайн, современные технологии, максимальная степень фильтрации</h2>
+                  <div class="button-wrapper">
+                  <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-1000.html" role="button">AQUEL 1000</a>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <h2 class="item__title">Питьевая вода, доступная Вам где угодно</h2>
+                  <h2 class="item__subtitle">Компактный фильтр, не требующий монтажа</h2>
+                  <div class="button-wrapper">
+                  <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-zero.html" role="button">AQUEL ZERO</a>
+                  </div>
+                </div>
+
               </div>
 
-              <div class="item">
-                <h2 class="item__title">Фильтр для воды в офис</h2>
-                <h2 class="item__subtitle">Отличный дизайн и современные технологии</h2>
-                <div class="button-wrapper">
-                <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-1000.html" role="button">AQUEL 1000</a>
-                </div>
-              </div>
-
-              <div class="item">
-                <h2 class="item__title">Питьевая вода, доступная Вам где угодно</h2>
-                <h2 class="item__subtitle">Компактный фильтр, не требующий монтажа</h2>
-                <div class="button-wrapper">
-                <a class="btn btn-default btn--welcome-to-shop" href="catalog/aquel-zero.html" role="button">AQUEL ZERO</a>
-                </div>
-              </div>
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
 
             </div>
 
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+          </div><!-- /.carusel-wrapper -->
 
-          <!-- <h1 class="welcome-to-shop__title animation-fadeIn">Добро пожаловать!</h1>
-          <p class="welcome-to-shop__subtitle animation-fadeIn">В мир чистой питьевой воды</p>
-          <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="catalog.html" role="button">КАТАЛОГ</a>
-          </div> -->
-
-        </div>
+        </div><!-- /.welcome-to-shop -->
 
         <div class="introduction">
-          <h2 class="introduction__title fadein-post">Лидер систем водоочистки в Европе</h2>
-          <span class="introduction__aquel-title fadein-post">AQUEL</span>
-          <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="brand-aquel.html" role="button">БРЕНД АКВЕЛ</a>
+
+          <div class="introduction-wrapper-title">
+
+            <div class="introduction-decoration-title"></div>
+            <div class="introduction__title-wrapper">
+              <h2 class="introduction__title">A<img src="img/logo-name-letter-Q.png" width="45" height="45" alt="Логотип">UEL</h2>
+              <span class="introduction__aquel-title">ЛИДЕР ВОДООЧИСТКИ В ЕВРОПЕ</span>
+            </div>
+
           </div>
-        </div>
+
+          <div class="introduction-wrapper-about">
+
+            <div class="introduction-decoration-about"></div>
+
+            <div class="introduction__about">
+              <h2 class="introduction__about-title">НЕМНОГО О НАС</h2>
+              <p class="introduction__about-content">Компания Аквел имеет Чешские корни, успешно развивается на территории Европейского союза, стран Прибалтики, очищает воду в Африке и уже 11 лет ведет свою работу в России. Мы умеем очищать воду, делать ее действительно питьевой, полезной и вкусной! Мы искренне верим, что на Земле нет ничего ценнее чистой питьевой воды. И такая вода должна быть доступна каждому!</p>
+              <a class="btn btn-default btn--introduction-about animation-fadeIn" href="brand-aquel.html" role="button">БРЕНД АКВЕЛ</a>
+            </div>
+
+            <div class="introduction__lead">
+              <h3 class="introduction__lead-title">Каждому покупателю бесплатно всегда:</h3>
+              <ul class="introduction__lead-list">
+                <li>Доставка фильтра</li>
+                <li>Монтаж на месте</li>
+                <li>Обслуживание в первый год</li>
+              </ul>
+
+              <div class="introduction__btn-wrapper">
+                <div class="introduction__lead-decoration-left"></div>
+                <a class="btn btn-default btn--introduction-about animation-fadeIn" href="catalog.html" role="button">КАТАЛОГ</a>
+                <div class="introduction__lead-decoration-right"></div>
+              </div>
+            </div>
+
+          </div><!-- /.introduction-wrapper-about -->
+        </div><!-- ./introduction -->
 
         <div class="infographics">
           <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <b>AQUEL?</b></h2>
