--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <ul class="introduction__lead-list">
                 <li>Доставка фильтра</li>
                 <li>Монтаж на месте</li>
-                <li>Обслуживание в первый год</li>
+                <li>Год обслуживания в подарок</li>
               </ul>
 
               <div class="introduction__btn-wrapper">
@@ -232,121 +232,128 @@
           </div><!-- /.introduction-wrapper-about -->
         </div><!-- ./introduction -->
 
-        <div class="infographics">
-          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <b>AQUEL?</b></h2>
+        <div class="our-products-wrapper">
+          <div class="our-products">
+            <h3 class="our-products_title">НАША ПРОДУКЦИЯ</h3>
+            <p class="our-products__content">Предлагаем Вашему вниманию современные водоочистительные системы для квартиры, дома и офиса производства Чешской Республики и США. Фильтры для воды в своей работе используют новейшие технологии в сфере фильтрации воды, такие как <i>обратный осмос, ультрафиолетовое облучение, минерализация, обезжелезивание воды</i> и другие.</p>
+          </div><!-- /.our-products -->
+        </div><!-- /.our-products-wrapper -->
 
-          <div class="infographics-wrapper-first-block">
+        <div class="product-aquel-200">
+          <h3 class="product-aquel-200__title">AQUEL 200</h3>
 
-            <div class="infographics-first-block__slider">
+          <div class="aquel-200-wrapper">
 
-              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
+            <div class="aquel-200__list">
+              <ul>
+                <li class="aquel-200__advatnages-one">ИДЕАЛЬНО ДЛЯ ДОМА</li>
+                <li class="aquel-200__list-item">Установка под мойку</li>
+                <li class="aquel-200__list-item">7 ступеней очистки</li>
+                <li class="aquel-200__list-item">Производство Чехия</li>
+                <li class="aquel-200__advatnages-two">МАЛАЯ ЦЕНА ВЛАДЕНИЯ</li>
+                <li class="aquel-200__list-item">Гарантия 5 лет!</li>
+                <li class="aquel-200__list-item">Аналогов за эту цену - нет</li>
+                <li class="aquel-200__list-item">Обслуживание - раз в 10 месяцев</li>
+                <li class="aquel-200__advatnages-three">КУПИТЬ ЛЕГКО И БЕЗОПАСНО</li>
+                <li class="aquel-200__list-item">Защищенные платежи</li>
+                <li class="aquel-200__list-item">Покупка в "один клик"</li>
+                <li class="aquel-200__list-item">Консультация специалиста</li>
+              </ul>
+            </div>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
+            <div class="aquel-200__img">
+              <img src="img/aquel-200+box-slider.png" alt="Фильтр AQUEL 200">
+              <a class="btn btn-default btn--product animation-fadeIn" href="catalog/aquel-200.html" role="button">ПЕРЕЙТИ НА СТРАНИЦУ ТОВАРА</a>
+            </div>
+          </div><!-- /.aquel-200-wrapper -->
 
-                  <div class="item active infographics__slider-one">
-                    <a href="catalog/aquel-1000.html">
-                      <img src="img/aquel-1000-slider.png" alt="Фильтр для воды AQUEL 1000">
-                    </a>
-                    <div class="carousel-caption">
+        </div><!-- /.product-aquel-200 -->
 
-                    </div>
-                  </div>
+        <div class="product-aquel-1000">
+          <h3 class="product-aquel-1000__title">AQUEL 1000</h3>
 
-                  <div class="item infographics__slider-two">
-                    <a href="catalog/aquel-200.html">
-                      <img src="img/aquel-200+box-slider.png" alt="Фильтр для воды AQUEL 200">
-                    </a>
-                    <div class="carousel-caption">
+          <div class="aquel-1000-wrapper">
 
-                    </div>
-                  </div>
+            <div class="aquel-1000__img">
+              <img src="img/aquel-1000.png" alt="Фильтр AQUEL 1000">
+              <a class="btn btn-default btn--product animation-fadeIn" href="catalog/aquel-1000.html" role="button">ПЕРЕЙТИ НА СТРАНИЦУ ТОВАРА</a>
+            </div>
 
-                  <div class="item infographics__slider-three">
-                    <a href="catalog/aquel-zero.html">
-                      <img src="img/aquel-zero-slider.png" alt="Фильтр для воды AQUEL Zero">
-                    </a>
-                    <div class="carousel-caption">
+            <div class="aquel-1000__list">
+              <ul>
+                <li class="aquel-1000__advatnages-one">ИДЕАЛЬНО ДЛЯ ОФИСА</li>
+                <li class="aquel-1000__list-item">Строгий дизайн</li>
+                <li class="aquel-1000__list-item">Максимальная фильтрация</li>
+                <li class="aquel-1000__list-item">Производство США</li>
+                <li class="aquel-1000__advatnages-two">УДОБНО ПОЛЬЗОВАТЬСЯ</li>
+                <li class="aquel-1000__list-item">Легкий монтаж</li>
+                <li class="aquel-1000__list-item">Большая производительность</li>
+                <li class="aquel-1000__list-item">Обслуживание - раз в 10 месяцев</li>
+                <li class="aquel-1000__advatnages-three">КУПИТЬ ЛЕГКО И БЕЗОПАСНО</li>
+                <li class="aquel-1000__list-item">Защищенные платежи</li>
+                <li class="aquel-1000__list-item">Покупка в "один клик"</li>
+                <li class="aquel-1000__list-item">Консультация специалиста</li>
+              </ul>
+            </div>
 
-                    </div>
-                  </div>
+          </div><!-- /.aquel-1000-wrapper -->
 
-                </div>
+        </div><!-- /.product-aquel-1000 -->
 
-              </div>
+        <div class="product-aquel-zero">
+          <h3 class="product-aquel-zero__title">AQUEL ZERO</h3>
 
-            </div><!-- /.Slider -->
+          <div class="aquel-zero-wrapper">
 
-            <div class="infographics-first-block__content">
-              <div class="infographics-first-block__content-item-one">
+            <div class="aquel-zero__list">
+              <ul>
+                <li class="aquel-zero__advatnages-one">НЕ ТРЕБУЕТ МОНТАЖА</li>
+                <li class="aquel-zero__list-item">Занимает мало места</li>
+                <li class="aquel-zero__list-item">Прост в обслуживании</li>
+                <li class="aquel-zero__list-item">Производство Чехия</li>
+                <li class="aquel-zero__advatnages-two">ДОЛГОВЕЧНЫЕ МАТЕРИАЛЫ</li>
+                <li class="aquel-zero__list-item">Гарантия 5 лет!</li>
+                <li class="aquel-zero__list-item">Легко заменяемые картриджи</li>
+                <li class="aquel-zero__list-item">Обслуживание - раз в 10 месяцев</li>
+                <li class="aquel-zero__advatnages-three">КУПИТЬ ЛЕГКО И БЕЗОПАСНО</li>
+                <li class="aquel-zero__list-item">Защищенные платежи</li>
+                <li class="aquel-zero__list-item">Покупка в "один клик"</li>
+                <li class="aquel-zero__list-item">Консультация специалиста</li>
+              </ul>
+            </div>
 
-                  <h3 class="question-content-one__title">
-                    <span>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm22 20h4V10h-8v4h4v16zM42 2H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28z"/></svg>
-                    </span>ЕВРОПЕЙСКОЕ КАЧЕСТВО</h3>
-                  <ul class="infographics-first-block__question-list-one">
-                    <li>Запатентованные технологии</li>
-                    <li>Максимальная степень очистки</li>
-                    <li>Обогащение активными минералами</li>
-                  </ul>
+            <div class="aquel-zero__img">
+              <img src="img/aquel-zero.png" alt="Фильтр AQUEL ZERO">
+              <a class="btn btn-default btn--product animation-fadeIn" href="catalog/aquel-zero.html" role="button">ПЕРЕЙТИ НА СТРАНИЦУ ТОВАРА</a>
+            </div>
 
-              </div>
+          </div><!-- /.aquel-zero-wrapper -->
 
-              <div class="divider-main divider-main--info"></div>
-
-              <div class="infographics-first-block__content-item-two">
-
-                  <h3 class="question-content-two__title">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm36-8H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28zm-8-8h-8v-4h4c2.21 0 4-1.79 4-4v-4c0-2.21-1.79-4-4-4h-8v4h8v4h-4c-2.21 0-4 1.79-4 4v8h12v-4z"/></svg></span>МАЛАЯ ЦЕНА ВЛАДЕНИЯ</h3>
-                  <ul class="infographics-first-block__question-list-two">
-                    <li>Гарантия от 5 лет!</li>
-                    <li>Аналогов за эту цену - нет</li>
-                    <li>Обслуживание один раз в 10 месяцев</li>
-                  </ul>
-
-              </div>
-
-              <div class="divider-main divider-main--info"></div>
-
-              <div class="infographics-first-block__content-item-three">
-
-                  <h3 class="question-content-three__title">
-                    <span>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M42 2H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28zM6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm28 16v-3c0-1.66-1.34-3-3-3 1.66 0 3-1.34 3-3v-3c0-2.21-1.79-4-4-4h-8v4h8v4h-4v4h4v4h-8v4h8c2.21 0 4-1.79 4-4z"/></svg>
-                    </span>КУПИТЬ ЛЕГКО И БЕЗОПАСНО</h3>
-                  <ul class="infographics-first-block__question-list-three">
-                    <li>Бесплатная доставка</li>
-                    <li>Бесплатный монтаж</li>
-                    <li>Консультация перед покупкой</li>
-                  </ul>
-
-              </div>
-
-            </div><!-- /.infographics-first-block__content -->
-
-          </div><!-- /.infographics-wrapper-first-block -->
-
-        </div><!-- /.infographics -->
+        </div><!-- /.product-aquel-zero -->
 
         <div class="advice">
 
-          <h2 class="advice__title">Получите консультацию</h2>
-          <div class="container-article">
-            <p class="advice__content">Это бесплатно</p>
-            <p class="advice__content">Мы перезвоним прямо сейчас</p>
-            <p class="advice__content">Расскажем о наших фильтрах и <b>патентах</b></p>
-            <p class="advice__content">Подарим бесплатное сервисное обслуживание на год!*</p>
-            <p class="advice__content advice__content--small">*Обслуживание на год всем новым покупателям в подарок!</p>
-          </div>
-          <div class="button-wrapper">
-            <a href="#callbackwidget" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
-          </div>
+          <div class="advice-wrapper">
+
+            <div class="advice__form-place">
+
+              <div class="advice-form__wrapper">
+                <p class="advice-form__subtitle">ОСТАЛИСЬ ВОПРОСЫ?</p>
+                <h3 class="advice-form__title">ПОЛУЧИТЕ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА!</h3>
+                <form action="" class="advice-form" method="post">
+                  <input type="text" name="form-name" class="advice-form__name" placeholder="ИМЯ" required="required">
+                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="ТЕЛЕФОН" required="required">
+                  <button class="advice-form__button">ОТПРАВИТЬ</button>
+                </form>
+              </div>
+
+            </div><!-- /.advice__form-place -->
+
+            <div class="advice__image">
+              <img src="img/advice-bg.png" width="1200" height="800" alt="Фон блока консультации">
+            </div>
+
+          </div><!-- /.advice-wrapper -->
 
         </div><!-- /.advice -->
 
