Add promo video block

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <li class="aquel-zero__list-item">Производство Чехия</li>
                 <li class="aquel-zero__advatnages-two">ДОЛГОВЕЧНЫЕ МАТЕРИАЛЫ</li>
                 <li class="aquel-zero__list-item">Гарантия 5 лет!</li>
-                <li class="aquel-zero__list-item">Легко заменяемые картриджи</li>
+                <li class="aquel-zero__list-item">Европейские комплектующие</li>
                 <li class="aquel-zero__list-item">Обслуживание - раз в 10 месяцев</li>
                 <li class="aquel-zero__advatnages-three">КУПИТЬ ЛЕГКО И БЕЗОПАСНО</li>
                 <li class="aquel-zero__list-item">Защищенные платежи</li>
@@ -341,8 +341,8 @@
                 <p class="advice-form__subtitle">ОСТАЛИСЬ ВОПРОСЫ?</p>
                 <h3 class="advice-form__title">ПОЛУЧИТЕ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА!</h3>
                 <form action="" class="advice-form" method="post">
-                  <input type="text" name="form-name" class="advice-form__name" placeholder="ИМЯ" required="required">
-                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="ТЕЛЕФОН" required="required">
+                  <input type="text" name="form-name" class="advice-form__name" placeholder="Имя" required="required">
+                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="Телефон" required="required">
                   <button class="advice-form__button">ОТПРАВИТЬ</button>
                 </form>
               </div>
@@ -357,7 +357,23 @@
 
         </div><!-- /.advice -->
 
-        <div class="promo-video">
+        <div class="promo-video-wrapper">
+
+          <div class="promo-video__content-wrapper">
+            <div class="promo-video__content">
+              <h4 class="promo-video__title">ПОЧЕМУ СЕГОДНЯ ЛЮБАЯ ВОДА ТРЕБУЕТ ФИЛЬТРАЦИИ?</h4>
+              <p class="promo-video__subtitle">В воде могут содержаться:</p>
+              <ul class="promo-video__list">
+                <li><span>Пестициды, бактерии, гормоны</span></li>
+                <li><span>Остатки удобрений, химия</span></li>
+              </ul>
+              <p class="promo-video__subtitle">После фильтрации вода:</p>
+              <ul class="promo-video__list">
+                <li><span>Содержит минералы, имеет pH ~ 7</span></li>
+                <li><span>Подходит для детей, гипоаллергенна</span></li>
+              </ul>
+            </div>
+          </div>
 
           <div class="promo__video">
             <video controls preload="metadata" poster="video/Aquel-1000-promo-poster.jpg">
@@ -365,7 +381,7 @@
             </video>
           </div>
 
-        </div><!-- /.promo-video -->
+        </div><!-- /.promo-video-wrapper -->
 
         <div class="answer-main">
 
